vlib/v/parser/tests/fn_type_only_args_unknown_name.vv
fn test(param) {
}

fn main() {
	test(0)
}
